stop image from stretching

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@ a {
     width: 50%;
     margin-left: -8.5%;  /* The place in the pic where the Y comes up, adjusted to its own height */
     padding: 0.2em;
+    height: auto;
   }
 
   span {
